<resources>
    <string name="app_name">Moviephile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="see_all">See All</string>
    <string name="trending_now">Trending Now</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="error_image">Error_Image</string>
    <string name="error">ERROR</string>
    <string name="movie_image">Movie Image</string>
    <string name="phone_code">+62</string>
    <string name="phone">No. Hp</string>
    <string name="login">LOGIN</string>
    <string name="search">Search</string>
    <string name="no_data">[no data]</string>
    <string name="your_name">Nama Anda</string>
    <string name="sign_up">SIGN UP</string>
    <string name="verify">VERIFIKASI</string>
    <string name="otp">OTP</string>
    <string name="no_otp">Tidak menerima OTP?</string>
    <string name="resend_otp">Kirim Ulang</string>
    <string name="please_wait">Please Wait…</string>
    <string name="wait">Sebentar…</string>
    <string name="please_click_back_again_to_exit">Click Again To Exit</string>
    <string name="err_msg_enter_name">Enter Your Name</string>
    <string name="please_fill">Please Fill The Field</string>
    <string name="err_msg_phone_number_length">Under 5 Digits!</string>
    <string name="otp_send">Wait For OTP</string>
    <string name="otp_resend_success">OTP Resend Success</string>
    <string name="log_out">LOG OUT</string>
    <string name="sign_out_dialog_message">Yakin Keluar Akun?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="tab">Tab</string>
    <string name="title">Movie Title</string>
    <string name="plot_summary">Plot Summary :</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="type">Type :</string>
    <string name="search_rank">Search Rank :</string>
    <string name="stars_value">Robert Downey Jr., Chris Hemsworth, Mark Ruffalo</string>
    <string name="stars">Stars :</string>
    <string name="year">Year :</string>
    <string name="running_time">Running Time (Minutes) :</string>
    <string name="rating">MPAA Rating :</string>
    <string name="mpaa_rating_reason">Rating Reason :</string>
    <string name="mpaa_rating_reason_value">Rated PG-13 for sequences of sci-fi violence and action, and some language</string>
    <string name="imdb_rating">IMDB Rating :</string>
    <string name="top_rank">Top Rank :</string>
    <string name="rating_count">Rating Count :</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="release_date">Release Date :</string>
    <string name="update">UPDATE</string>
    <string name="quote_movie_favorite">Favorite Movie Quote</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="comment">Tambahkan Komentar</string>
    <string name="tambahkan_review">Tambahkan Review Anda</string>
    <string name="add_to_list">ADD TO LIST</string>
    <string name="judul">Judul</string>


</resources>